--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -6,7 +6,7 @@
     align-items: center;
     margin: 0 auto;
     background-color: white;
-    gap: 30px;
+    gap: 10px;
     padding: 20px;
 
     h3 {
@@ -53,7 +53,7 @@
   
   
 .main {
-    padding: 60px 20px;
+    margin: 45px 25px;
 
     video {
         position: fixed;
@@ -71,12 +71,12 @@
         max-width: 1000px;
         gap: 4%;
         margin: 0 auto;
-        
+
         .input {
-            grid-column: 1 / 1;
-            width: 100%;
-            text-align: center;
-          }
+          grid-column: 1 / 1;
+          width: 100%;
+          text-align: center;
+        }
 
         .output {
             grid-column: 2/2;
@@ -86,6 +86,16 @@
             text-align: center;
             gap: 24px;
         }
+        
+        @media only screen and (max-width: 837px)  {
+          grid-template-columns: 100%;
+
+          .output {
+            grid-column: 1 / 1;
+          }
+        }
+
+        
     }
 
     input {
@@ -156,7 +166,7 @@
     }
       
     textarea {
-        --padding: 20px;
+        --padding: 30px;
         --border: 1px;
         width: calc(100% - (2 * var(--padding)));
         resize: none;
@@ -193,29 +203,10 @@
         }
       }
       
-    input[type="submit"] {
-        margin-top: -15px;
-        padding: 30px;
-        color: #fff;
-        font-family: "Barlow Semi Condensed";
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 32px;
-        background-color: #E2073D;
-        border: none;
-        border-radius: 10px;
-        text-align: center;
-        cursor: pointer;
-        &:hover {
-            background-color: rgb(88,88,88);
-          }
-          
-        &:active {
-            transform: translateY(5px);
-          }
-      }
+
+
       
-    
+      
     .resultWrapper {
         border-radius: 10px;
         background-color: white;
@@ -249,36 +240,140 @@
             background: #555; 
         }
     
-      }
-      
-    
-      
-    button {
-        margin-top: -15px;
-        padding: 30px;
-        color: #fff;
-        font-family: "Barlow Semi Condensed";
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 32px;
-        background-color: rgb(88,88,88);
-        border: none;
-        border-radius: 10px;
-        text-align: center;
-        cursor: pointer;
-        line-height: 24px;
-
-        &:active {
-            transform: translateY(5px);
-          }
-      }
-      
-    
-      
-    
+      }    
   } 
   
+.button {
+  padding: 30px;
+  margin-bottom: 25px;
+  color: #fff;
+  font-family: "Barlow Semi Condensed";
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 32px;
+  background-color: #E2073D;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
+  text-decoration: none;
+
+  &.explainerVideoButton {
+    font-size: 20px;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 0px;
+
+    &:after {
+      background-image: url('../public/resize-white.png');
+      background-size: cover;
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-left: 5px;
+      content: "";
+      top: 0;
+      right: 0;
+    }
+  }
   
-  
-  
-  
+  &.recipeButton {
+    width: 100%;
+    font-size: 20px;
+    padding: 15px;
+    margin-bottom: 12px;
+  }
+
+  &.cheatsheetButton {
+    background-color: hsl(0, 0%, 69%);
+    color: #000;
+
+    &:after {
+      background-image: url('../public/resize.png');
+      background-size: cover;
+      display: inline-block;
+      width: 25px;
+      height: 25px;
+      margin-left: 10px;
+      content: "";
+      top: 0;
+      right: 0;
+    }
+
+    &:hover {
+      background-color: hsl(0, 0%, 60%);  
+    }
+  }
+
+  &.loading {
+    background-color: rgb(88,88,88);
+    cursor: default;
+
+    &:active {
+      transform: translateY(0px);
+    }
+
+    &:after {
+      background-image: url("../public/rotate.png");
+      background-size: cover;
+      display: inline-block;
+      width: 25px; 
+      height: 25px;
+      margin-left: 10px;
+      content:"";
+      top: 0;
+      right: 0;
+      transition: 0.5s;
+      animation: rotating 2s linear infinite;
+    }
+
+    @keyframes rotating {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+
+  }
+  &:hover {
+      background-color: rgb(88,88,88);
+    }
+    
+  &:active {
+      transform: translateY(5px);
+    }
+}
+
+.recipes {
+  max-width: 800px;
+  margin: 60px auto;
+
+  h3 {
+    font-size: 26px;
+    margin-bottom: 24px;
+    text-align: center;
+  }
+
+  .recipeGrid {
+    display: grid;
+    max-width: 800px;
+    grid-template: repeat(4, 1fr) / 1fr 1fr;
+    grid-column-gap: 5%;
+    grid-row-gap: 30px;
+
+    .recipeItem {
+      display: flex;
+      justify-content: flex-start;
+      flex-direction: column;
+      
+      h4 {
+        margin-block-end: 0px;
+        text-align: center;
+      }
+    }
+  }
+}
+
