--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -221,6 +221,23 @@
         overflow: hidden;
         border: 1px solid black;
         border-radius: 10px;
+        position: relative;
+
+        .stopButton {
+          position: absolute;
+          bottom: 10px; /* Adjust the distance from the bottom as needed */
+          right: 20px; /* Adjust the distance from the right as needed */
+          padding: 5px 10px;
+          background-color: #5b5b5b; /* Change the background color as desired */
+          color: #fff; /* Change the text color as desired */
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #4c4c4c;
+          }
+        }
     }  
 
     .result {
